--- a/src/presentation/component/organisms/Market/style.module.scss
+++ b/src/presentation/component/organisms/Market/style.module.scss
@@ -64,7 +64,7 @@
 	@include x-small {
 		padding-bottom: 96px;
 	}
-	&Main {
+	img {
 		display: block;
 		width: 100%;
 		height: 300px;
@@ -74,38 +74,38 @@
 		@include medium {
 			height: initial;
 		}
-	}
-	&Inc {
-		position: absolute;
-		left: 64px;
-		bottom: 0;
-		z-index: 1;
-		height: 184px;
-		object-fit: contain;
-		@include large {
-			height: 160px;
-			left: 40px;
+		&:nth-child(2) {
+			position: absolute;
+			left: 64px;
+			bottom: 0;
+			z-index: 1;
+			width: auto;
+			height: 184px;
+			object-fit: contain;
+			@include large {
+				height: 160px;
+				left: 40px;
+			}
+			@include x-small {
+				height: 120px;
+				left: 32px;
+			}
 		}
-		@include x-small {
-			height: 120px;
-			left: 32px;
-		}
-	}
-	&Price {
-		position: absolute;
-		right: 56px;
-		bottom: 64px;
-		height: 88px;
-		object-fit: contain;
-		@include large {
-			right: 32px;
-			bottom: 80px;
-			height: 80px;
-		}
-		@include x-small {
-			bottom: 64px;
-			right: 24px;
-			height: 56px;
+		&:last-child {
+			position: absolute;
+			right: 0;
+			bottom: 32px;
+			width: auto;
+			height: 168px;
+			object-fit: contain;
+			@include large {
+				bottom: 40px;
+				height: 140px;
+			}
+			@include x-small {
+				bottom: 42px;
+				height: 88px;
+			}
 		}
 	}
 }
