--- a/src/presentation/component/organisms/ProfitInvestments/style.module.scss
+++ b/src/presentation/component/organisms/ProfitInvestments/style.module.scss
@@ -1,6 +1,6 @@
 @import "core/styles/_assets.scss";
 
-.grow {
+.profit {
 	overflow: hidden;
 	padding: 60px 0;
 	background-color: color(secondary);
