--- a/src/presentation/component/organisms/Numbers/style.module.scss
+++ b/src/presentation/component/organisms/Numbers/style.module.scss
@@ -1,6 +1,6 @@
 @import "core/styles/_assets.scss";
 
-.features {
+.numbers {
 	padding: 120px 0 60px;
 	background-color: color(primary);
 	@include large {
