--- a/src/presentation/component/molecules/CryptoItem/style.module.scss
+++ b/src/presentation/component/molecules/CryptoItem/style.module.scss
@@ -53,6 +53,7 @@
 	top: 0;
 	left: 0;
 	z-index: zi(crypto-link);
+	opacity: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -68,7 +69,7 @@
 	@include small {
 		margin-bottom: 16px;
 	}
-	img {
+	.el {
 		display: block;
 		height: 80px;
 		@include medium {
