--- a/src/presentation/component/organisms/HeroBanner/style.module.scss
+++ b/src/presentation/component/organisms/HeroBanner/style.module.scss
@@ -1,5 +1,35 @@
 @import "core/styles/_assets.scss";
 
+@mixin banner-item() {
+	display: table !important;
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: calc(100vh - 150px);
+	min-height: 720px;
+	max-height: 960px;
+	padding: 96px 0;
+	@include x-large {
+		min-height: 680px;
+		padding: 88px 0;
+	}
+	@include large {
+		height: calc(100vh - 118px);
+		max-height: 640px;
+		padding: 80px 0;
+	}
+	@include medium {
+		min-height: 400px;
+		padding: 72px 0;
+		height: calc(100vh - 72px);
+		max-height: 520px;
+	}
+	@include small {
+		padding: 64px 0;
+		height: calc(100vh - 64px);
+	}
+}
+
 .banner {
 	position: relative;
 	:global(.slick-dots) {
@@ -36,33 +66,7 @@
 }
 
 .item {
-	display: table !important;
-	position: relative;
-	overflow: hidden;
-	width: 100%;
-	height: calc(100vh - 150px);
-	min-height: 720px;
-	max-height: 960px;
-	padding: 96px 0;
-	@include x-large {
-		min-height: 680px;
-		padding: 88px 0;
-	}
-	@include large {
-		height: calc(100vh - 118px);
-		max-height: 640px;
-		padding: 80px 0;
-	}
-	@include medium {
-		min-height: 400px;
-		padding: 72px 0;
-		height: calc(100vh - 72px);
-		max-height: 520px;
-	}
-	@include small {
-		padding: 64px 0;
-		height: calc(100vh - 64px);
-	}
+	@include banner-item();
 	&::before {
 		content: "";
 		position: absolute;
@@ -90,4 +94,63 @@
 	vertical-align: middle;
 	width: 100%;
 	height: 100%;
+}
+
+:global(.placeholder) {
+	@include banner-item();
+}
+:global(.placeholder-inner) {
+	@include clearfix;
+}
+:global(.placeholder-img) {
+	float: right;
+	width: 600px;
+	height: 600px;
+}
+:global(.placeholder-text) {
+	float: left;
+	width: calc(100% - 600px);
+	padding-right: 32px;
+}
+:global(.placeholder-line) {
+	width: 100%;
+	min-height: 24px;
+	height: 100%;
+	margin-bottom: 6px;
+	border-radius: 2px;
+	background: rgba(130, 130, 130, 0.2);
+	background: -webkit-gradient(
+		linear,
+		left top,
+		right top,
+		color-stop(8%, rgba(130, 130, 130, 0.2)),
+		color-stop(18%, rgba(130, 130, 130, 0.3)),
+		color-stop(33%, rgba(130, 130, 130, 0.2))
+	);
+	background: linear-gradient(
+		to right,
+		rgba(130, 130, 130, 0.2) 8%,
+		rgba(130, 130, 130, 0.3) 18%,
+		rgba(130, 130, 130, 0.2) 33%
+	);
+	background-size: 800px 100px;
+	animation: wave-lines 2s infinite ease-out;
+	:global(.placeholder-badge) & {
+		max-width: 360px;
+		height: 48px;
+		margin-bottom: 24px;
+	}
+	:global(.placeholder-title) & {
+		height: 64px;
+		margin-bottom: 8px;
+	}
+}
+
+@keyframes wave-lines {
+	0% {
+		background-position: -468px 0;
+	}
+	100% {
+		background-position: 468px 0;
+	}
 }
